[tool.poetry]
name = "pvp"
version = "0.1.0"
description = "Personal Vacancies Parse"
authors = ["bbt-t <zlukcss@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/bbt-t/pvp"
repository = "https://github.com/bbt-t/pvp"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.8"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
